# telegram_buffer_sender

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am  telegrambf.conf.in  telegrambf.in  telegrambf.service.in  telegrambf@.service.in
src/: Makefile.am  config_file.c  config_file.h  http_parser.c  http_parser.h  https.c  https.h  jsmn.c  jsmn.h  main.c  main.h  message.c  message.h  network_parser.c  network_parser.h  socket_interface.c  socket_interface.h  uri_encode.c  uri_encode.h
